Bug 48868 - Ctrl-Tab no longer passes to next Auto input values
Summary: Ctrl-Tab no longer passes to next Auto input values
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other Linux (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.7.0 target:3.6.2
Keywords: regression
: 51774 53546 54452 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-18 03:48 UTC by Cor Nouws
Modified: 2017-10-27 11:20 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-04-18 03:48:16 UTC
- new spreadsheet
- in A1: apple
- in A2: apple juice
- cursor in A3 or A4
- type a
  > apple shows
- type ctrl-Tab to pass to next entry with 'a' (apple juice)
  > nothing happens

Of course make sure that Tools > Ceel contents > Auto input is enabled

(Note, when disabled, hitting Ctrl-Tab after the a, the cell shows 'apple' :-) )
Comment 1 Cor Nouws 2012-04-18 03:58:11 UTC
it's already in the oldest Daily I have here:
  Build ID: a04fee7-4d74905-6299bf6-879ce36-4c023a
Comment 2 Markus Mohrhard 2012-04-18 06:23:36 UTC
Can you name a build in which this still worked?
Comment 3 Cor Nouws 2012-04-18 10:24:48 UTC
(In reply to comment #2)
> Can you name a build in which this still worked?

I happened to have more old builds :-)

  Build ID: a9ebfbc-9eed775-f061262-libreoffice-3-5 branch-point  
was OK
  Build ID: 41e8fe1-8a74106-f0d66f 3.6.0alpha0+ 
has the defect (the latter is a local build, I think)

HTH
Comment 4 Nino 2012-04-18 14:04:14 UTC
works in 3.5.2.2
Comment 5 Markus Mohrhard 2012-07-06 11:48:01 UTC
*** Bug 51774 has been marked as a duplicate of this bug. ***
Comment 6 Cor Nouws 2012-07-06 12:43:48 UTC
LOL, now this bug has duplicates :-D :-D
Comment 7 Cor Nouws 2012-07-06 23:53:02 UTC
( Typical example of memory corruption, sorry Markus! )
Comment 8 Kohei Yoshida 2012-08-17 19:37:38 UTC
I'm looking into it.
Comment 9 Not Assigned 2012-08-17 19:51:51 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e704e4691186c23e52490817d6b710ef5bf68db6

fdo#48868: Allow Ctrl-TAB and Ctrl-Shift-TAB to cycle through candidates.
Comment 10 Kohei Yoshida 2012-08-17 20:17:04 UTC
This is now fixed.
Comment 11 Not Assigned 2012-08-22 06:49:42 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2d7d1e59b908ee095e21a55101b380d2dc23008e&g=libreoffice-3-6

fdo#48868: Allow Ctrl-TAB and Ctrl-Shift-TAB to cycle through candidates.


It will be available in LibreOffice 3.6.2.
Comment 12 Andras Timar 2012-09-05 07:29:19 UTC
*** Bug 54452 has been marked as a duplicate of this bug. ***
Comment 13 Xisco Faulí 2017-10-27 11:20:21 UTC
*** Bug 53546 has been marked as a duplicate of this bug. ***