fdo#48868: Allow Ctrl-TAB and Ctrl-Shift-TAB to cycle through candidates.

This applies to two scenarios: 1) cycling through cell values, and 2)
cycling through cell functions in a formula tip window.  Both were broken
and this commit fixes both.

Change-Id: I7826efbada827b8ec3edc5f34a1876c84e5e6236